# photosort

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: default_config.yaml
photosort/: __init__.py  __main__.py  cli.py  config.py  duplicates.py  metadata.py  scanner.py  sorter.py  utils.py
tests/: __init__.py  test_config.py  test_duplicates.py  test_metadata.py
